# OS_lab4

./: .gitignore  CMakeLists.txt  README.md
src/: file_queue.cpp  file_queue.h  main.cpp  queue_logic.cpp  queue_logic.h  queue_types.h  receiver.cpp  receiver.h  sender.cpp  sender.h  sync_objects.cpp  sync_objects.h
tests/: file_queue_tests.cpp  ipc_tests.cpp  queue_logic_tests.cpp
